packages/fetch-extension/src/pages-new/main/style.module.scss
@import "../../styles/var";

.wallet-details {
  background: rgba(255, 255, 255, 0.08);
  box-shadow: 10px 10px 50px 0px rgba(255, 255, 255, 0.1) inset;
  backdrop-filter: blur(25px);
  padding: $p-lg;
  width: 100%;
  border-radius: $p-lg;
  color: white;
  font-size: $xs;
  position: relative;

  img {
    height: 12px;
    width: 12px;
  }
}

.wallet-name,
.address {
  display: flex;
  align-items: center;
  gap: 4px;
  cursor: pointer;
}

.address {
  opacity: 0.6;
  display: flex;
  flex-direction: column;
}

.chain-select {
  margin-top: 3px;
  color: $font-dark;
  display: flex;
  height: 32px;
  padding: 6px 12px;
  justify-content: center;
  align-items: center;
  gap: 5px;
  border-radius: 100px;
  border: 1px solid $bg-grey-dark;
  backdrop-filter: blur(10px);
  background: transparent;
  font-size: 14px;
  font-weight: 400;
}

.view-details {
  cursor: pointer;
  height: 27px;
  display: flex;
  padding: 6px 12px;
  align-items: center;
  gap: 5px;
  border-radius: 100px;
  backdrop-filter: blur(10px);
  background: transparent;
  border: 0px;
  color: white;
  box-shadow: none;
  width: 95px;
  font-size: 12px;
}

.chain-select:hover,
.change-net:hover {
  cursor: pointer;
  opacity: 0.9;
  border: 1px solid $bg-grey-dark !important;
  box-shadow: none !important;
}

.change-net {
  height: 24px !important;
  background-color: transparent !important;
  padding: 0px 12px !important;
  border: 0px;
  border-radius: 100px;
  border: 1px solid $bg-grey-dark;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  box-shadow: none;
}

.chat-button {
  display: flex;
  width: 48px;
  height: 32px;
  padding: 6px 12px;
  justify-content: center;
  align-items: center;
  gap: 5px;
  border-radius: 100px;
  background: transparent;
  border: 1px solid rgba(255, 255, 255, 0.4);

  img {
    margin-top: 2px;
  }
}

.chat-button:hover {
  border: 1px solid white;
}

.chat-button:disabled {
  opacity: 0.5;
  cursor: not-allowed;
  border: 1px solid rgba(255, 255, 255, 0.4);
}

.wallet-detail-card {
  font-size: 14px;
  padding: 8px 10px;
  gap: 12px;
  align-self: stretch;
  color: $font-secondary;

  border-radius: 12px;
  border: 1px solid $bg-grey-dark;
  background: transparent;
  box-shadow: 10px 10px 50px 0px rgba(255, 255, 255, 0.1) inset;
  backdrop-filter: blur(25px);

  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
  z-index: 100;
}

.rewards-card {
  font-size: 14px;
  border-radius: 12px;
  display: flex;
  align-items: center;
  color: $font-dark;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 12px;
  padding: 12px 18px;
  position: relative;
  margin-top: 12px;
  gap: 2px;
  cursor: pointer;
  background-color: $bg-green-base;
}

.wallet-address {
  font-weight: 400;
  color: $font-dark;
  max-width: 90%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.tab {
  font-weight: 400;
  padding: 6px 12px;
  text-align: center;
  cursor: pointer;
  color: #fff;
}

.tab1-container {
  display: flex;
  cursor: pointer;
  padding: 8px 0px;
  margin-bottom: 18px;
}

.tab1 {
  font-size: $xs;
  font-weight: 400;
  text-align: center;
  cursor: pointer;
  color: #fff;
  padding: 6px 12px;
  height: 33px;
}

.tab.active,
.tab1.active {
  border-radius: 8px;
  background: rgba(255, 255, 255, 0.2);
}

.inUsd {
  color: $font-grey;
  font-size: 16px;
}

.reward {
  font-size: $xl;
  cursor: pointer;
}

.actions {
  color: #fff;
  font-size: $xs;
  margin: 32px 0px;
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.action {
  display: flex;
  flex-direction: column;
  gap: 8px;
  align-items: center;
  cursor: pointer;
  background: transparent;
  border: none;
  color: white;
  padding: 0px;
}

.action:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.your-assets {
  font-size: $lg;
  margin-bottom: 12px;
  font-weight: 400;
  color: #fff;
}

.unsupportedKeyIcon {
  width: 100%;
  text-align: center;
  display: flex;
}

.walletRejected {
  display: flex;
  gap: 10px;
  color: orangered;
  font-size: 14px;
}

.wallet-address-text {
  font-size: 14px;
  font-weight: bold;
  color: rgba($font-dark, 0.8);
}

